--- a/home.html
+++ b/home.html
@@ -1,111 +1,130 @@
 <!DOCTYPE html>
 <html lang="id">
-
 <head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <style>
-        body {
-            background-color: #f8f9fa;
-        }
-
-        .logo {
-            font-size: 24px;
-            font-weight: bold;
-            padding: 10px 20px;
-        }
-
-        footer {
-            background-color: #343a40;
-            color: white;
-            text-align: center;
-            padding: 20px 0;
-            margin-top: 40px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Home | JamStore</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+  <style>
+    body {
+      background-color: #f8f9fa;
+    }
+    .logo {
+      font-size: 24px;
+      font-weight: bold;
+      padding: 10px 20px;
+    }
+    footer {
+      background-color: #343a40;
+      color: white;
+      text-align: center;
+      padding: 20px 0;
+      margin-top: 40px;
+    }
+  </style>
 </head>
-
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-sm">
-            <div class="container-fluid">
-                <a class="navbar-brand fw-bold" href="#">JamStore</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" id="Beranda">Beranda</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" id="product">Product</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">History</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Lainnya
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Tentang</a></li>
-                                <li><a class="dropdown-item" href="#">Kontak</a></li>
-                                <li><a class="dropdown-item" href="#">Bantuan</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
 
-   <main class="container my-5">
-    <h2 class="mb-4 text-center">Koleksi Kerajinan Tangan</h2>
+  <!-- Header & Navbar -->
+  <header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-sm">
+      <div class="container-fluid">
+        <a class="navbar-brand fw-bold" href="#">JamStore</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+          aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" href="#" id="Beranda">Beranda</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" id="product">Product</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">History</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Lainnya
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#" id="Tentang">Tentang</a></li>
+                <li><a class="dropdown-item" href="#">Kontak</a></li>
+                <li><a class="dropdown-item" href="#">Bantuan</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <!-- Main Content -->
+  <main class="container my-5" id="main-content">
+    <h2 class="mb-4 text-center">Koleksi Jam Dinding</h2>
 
     <div id="carouselJam" class="carousel slide mb-5 shadow rounded overflow-hidden" data-bs-ride="carousel" style="max-height: 400px;">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="assets/bg1.jpg" class="d-block w-100" alt="Jam 1" style="height: 400px; object-fit: cover;">
-            </div>
-            <div class="carousel-item">
-                <img src="assets/bg2.jpg" class="d-block w-100" alt="Jam 2" style="height: 400px; object-fit: cover;">
-            </div>
-            <div class="carousel-item">
-                <img src="assets/www.webp" class="d-block w-100" alt="Jam 3" style="height: 400px; object-fit: cover;">
-            </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="assets/bg1.jpg" class="d-block w-100" alt="Jam 1" style="height: 400px; object-fit: cover;">
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselJam" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Sebelumnya</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselJam" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Selanjutnya</span>
-        </button>
+        <div class="carousel-item">
+          <img src="assets/bg2.jpg" class="d-block w-100" alt="Jam 2" style="height: 400px; object-fit: cover;">
+        </div>
+        <div class="carousel-item">
+          <img src="assets/www.webp" class="d-block w-100" alt="Jam 3" style="height: 400px; object-fit: cover;">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselJam" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Sebelumnya</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselJam" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Selanjutnya</span>
+      </button>
     </div>
 
     <div class="row jam-container">
-        <!-- Kartu jam akan muncul di sini -->
+      <!-- Kartu jam akan dimuat melalui JavaScript -->
     </div>
-</main>
+  </main>
 
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 JamStore. Semua hak dilindungi.</p>
+  </footer>
 
-    <footer>
-        <p>&copy; 2025 JamStore. Semua hak dilindungi.</p>
-    </footer>
+  <!-- Bootstrap & jQuery -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="service/script.js"></script>
 
-    <!-- Script Bootstrap dan jQuery -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-        crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="service/script.js"></script>
+  <!-- Modal -->
+  <div class="modal fade" id="jamModal" tabindex="-1" aria-labelledby="jamModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="jamModalLabel">Detail Produk</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Tutup"></button>
+        </div>
+        <div class="modal-body text-center">
+          <img id="jamModalImage" src="" alt="Gambar Jam" class="img-fluid rounded mb-3" style="max-height: 300px;">
+          <h5 id="jamModalHarga" class="text-primary fw-bold"></h5>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Tutup</button>
+          <button type="button" class="btn btn-success">Beli Sekarang</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </body>
-
 </html>
